@@ -11,7 +11,7 @@ set_time_limit(0);
 /* set package info */
 define('PKG_NAME', 'statcache');
 define('PKG_NAME_LOWER', strtolower(PKG_NAME));
-define('PKG_VERSION', '1.3.0');
+define('PKG_VERSION', '1.4.0');
 define('PKG_RELEASE', 'pl');
 
 /* define sources */
