@@ -7,7 +7,8 @@ if ($object && $pluginid= $object->get('id')) {
             if (isset($options['activatePlugin']) && !empty($options['activatePlugin'])) {
                 $events = array(
                     'OnSiteRefresh',
-                    'OnBeforeSaveWebPageCache'
+                    'OnBeforeSaveWebPageCache',
+                    'OnDocFormSave'
                 );
                 foreach ($events as $eventName) {
                     $event = $object->xpdo->getObject('modEvent',array('name' => $eventName));
